[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/obstacle_enemy_idle.png" type="Texture" id=1]
[ext_resource path="res://Sprites/obstacle_enemy_walk.png" type="Texture" id=2]
[ext_resource path="res://Sprites/obstacle_enemy_attack.png" type="Texture" id=3]
[ext_resource path="res://Sprites/obstacle_enemy_dies.png" type="Texture" id=4]
[ext_resource path="res://Scripts/ObstacleMoving.gd" type="Script" id=5]
[ext_resource path="res://Audio/enemy_death.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/enemy_hit.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 11.0

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 19 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "Dies",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 6.0

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10.5313, 6.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 61.375, 10 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 102.75, 14.75 )

[node name="ObstacleMoving" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 5 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Hit"
playing = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PlatformCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2
collide_with_areas = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Hit" type="Area2D" parent="."]
collision_layer = 32
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2( -9, -9 )
shape = SubResource( 15 )

[node name="Attack" type="Area2D" parent="."]
collision_layer = 8
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( -8.46875, 6.5 )
shape = SubResource( 16 )

[node name="Attack2" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack2"]
position = Vector2( -75, 1 )
shape = SubResource( 18 )

[node name="Detect" type="Area2D" parent="."]
visible = false
collision_layer = 64
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( -0.25, -0.75 )
shape = SubResource( 17 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
